kajit/tests/snapshots/corpus__generated_ra_mir_postcard_vec_string__v1_x86_64.snap
---
source: kajit/tests/corpus.rs
expression: ra_text
---
ra_func @0 {
  block b0:
    call_lambda(@1) !gpr,simd
    term: return
    succs: (none)
}
ra_func @1 {
  block b0:
    bounds_check(1)
    v1:gpr = const(0x7f)
    v3:gpr = const(0x80)
    v5:gpr = const(0x0)
    v37:gpr = const(0x0)
    v39:gpr = const(0x20)
    v41:gpr = const(0x0)
    v0:gpr = read_bytes(1)
    v2:gpr = And v0:gpr, v1:gpr
    v4:gpr = And v0:gpr, v3:gpr
    v6:gpr = CmpNe v4:gpr, v5:gpr
    term: branch_if_zero v6 -> b2, fallthrough b1
    succs: b2 [v2, v37, v39, v41] b1 [v2, v37, v39, v41]
  block b1 [params: v2, v37, v39, v41] (preds: b0):
    term: branch b3
    succs: b3 [v2, v37, v39, v41]
  block b2 [params: v2, v37, v39, v41] (preds: b0):
    v7:gpr = const(0x4)
    v8:gpr = const(0x0)
    v33:gpr = copy v2:gpr
    v36:gpr = copy v8:gpr
    term: branch b6
    succs: b6 [v33, v8, v37, v39, v41]
  block b3 [params: v2, v37, v39, v41] (preds: b1):
    v9:gpr = const(0x7)
    v10:gpr = const(0x4)
    v11:gpr = const(0x1)
    v13:gpr = const(0x7f)
    v17:gpr = const(0x7)
    v19:gpr = const(0x1)
    v21:gpr = const(0x80)
    v23:gpr = const(0x0)
    v25:gpr = const(0x0)
    v100:gpr = copy v2:gpr
    v101:gpr = copy v9:gpr
    v102:gpr = copy v10:gpr
    term: branch b4
    succs: b4 [v13, v17, v19, v21, v23, v25, v37, v39, v41, v100, v101, v102]
  block b4 [params: v13, v17, v19, v21, v23, v25, v37, v39, v41, v100, v101, v102] (preds: b3, b4):
    bounds_check(1)
    v18:gpr = Add v101:gpr, v17:gpr
    v20:gpr = Sub v102:gpr, v19:gpr
    v12:gpr = read_bytes(1)
    v26:gpr = CmpNe v20:gpr, v25:gpr
    v14:gpr = And v12:gpr, v13:gpr
    v22:gpr = And v12:gpr, v21:gpr
    v15:gpr = Shl v14:gpr, v101:gpr/hw1
    v24:gpr = CmpNe v22:gpr, v23:gpr
    v16:gpr = Or v100:gpr, v15:gpr
    v27:gpr = And v24:gpr, v26:gpr
    v100:gpr = copy v16:gpr
    v101:gpr = copy v18:gpr
    v102:gpr = copy v20:gpr
    v103:gpr = copy v14:gpr
    v104:gpr = copy v24:gpr
    term: branch_if v27 -> b4, fallthrough b5
    succs: b4 [v13, v17, v19, v21, v23, v25, v37, v39, v41, v100, v101, v102] b5 [v37, v39, v41, v100, v104]
  block b5 [params: v37, v39, v41, v100, v104] (preds: b4):
    v33:gpr = copy v100:gpr
    v36:gpr = copy v104:gpr
    term: branch b6
    succs: b6 [v33, v36, v37, v39, v41]
  block b6 [params: v33, v36, v37, v39, v41] (preds: b2, b5):
    v38:gpr = CmpNe v36:gpr, v37:gpr
    v40:gpr = Shr v33:gpr, v39:gpr/hw1
    term: branch_if_zero v38 -> b8, fallthrough b7
    succs: b8 [v33, v40, v41] b7
  block b7 (preds: b6):
    term: branch b9
    succs: b9
  block b8 [params: v33, v40, v41] (preds: b6):
    term: branch b10
    succs: b10 [v33, v40, v41]
  block b9 (preds: b7):
    term: error_exit(InvalidVarint)
    succs: (none)
  block b10 [params: v33, v40, v41] (preds: b8):
    v42:gpr = CmpNe v40:gpr, v41:gpr
    term: branch_if_zero v42 -> b12, fallthrough b11
    succs: b12 [v33] b11
  block b11 (preds: b10):
    term: branch b13
    succs: b13
  block b12 [params: v33] (preds: b10):
    term: branch b14
    succs: b14 [v33]
  block b13 (preds: b11):
    term: error_exit(NumberOutOfRange)
    succs: (none)
  block b14 [params: v33] (preds: b12):
    term: branch_if_zero v33 -> b16, fallthrough b15
    succs: b16 b15 [v33]
  block b15 [params: v33] (preds: b14):
    term: branch b17
    succs: b17 [v33]
  block b16 (preds: b14):
    v43:gpr = const(0x8)
    v44:gpr = const(0x0)
    store([8:W8]) v43:gpr
    store([16:W8]) v44:gpr
    store([0:W8]) v44:gpr
    term: branch b34
    succs: b34
  block b17 [params: v33] (preds: b15):
    v45:gpr = const(0x18)
    v46:gpr = const(0x8)
    v50:gpr = const(0x7f)
    v52:gpr = const(0x80)
    v54:gpr = const(0x0)
    v86:gpr = const(0x0)
    v88:gpr = const(0x20)
    v90:gpr = const(0x0)
    v92:gpr = const(0x1)
    v94:gpr = const(0x18)
    v47:gpr = call_intrinsic(0x<ptr>, fo=0) v33:gpr, v45:gpr, v46:gpr !gpr,simd
    v48:gpr = save_out_ptr
    set_out_ptr v47:gpr
    v105:gpr = copy v33:gpr
    v106:gpr = copy v47:gpr
    term: branch b18
    succs: b18 [v33, v47, v48, v50, v52, v54, v86, v88, v90, v92, v94, v105, v106]
  block b18 [params: v33, v47, v48, v50, v52, v54, v86, v88, v90, v92, v94, v105, v106] (preds: b17, b32):
    set_out_ptr v106:gpr
    bounds_check(1)
    v93:gpr = Sub v105:gpr, v92:gpr
    v95:gpr = Add v106:gpr, v94:gpr
    v49:gpr = read_bytes(1)
    v51:gpr = And v49:gpr, v50:gpr
    v53:gpr = And v49:gpr, v52:gpr
    v55:gpr = CmpNe v53:gpr, v54:gpr
    term: branch_if_zero v55 -> b20, fallthrough b19
    succs: b20 [v33, v47, v48, v50, v51, v52, v54, v86, v88, v90, v92, v93, v94, v95] b19 [v33, v47, v48, v50, v51, v52, v54, v86, v88, v90, v92, v93, v94, v95]
  block b19 [params: v33, v47, v48, v50, v51, v52, v54, v86, v88, v90, v92, v93, v94, v95] (preds: b18):
    term: branch b21
    succs: b21 [v33, v47, v48, v50, v51, v52, v54, v86, v88, v90, v92, v93, v94, v95]
  block b20 [params: v33, v47, v48, v50, v51, v52, v54, v86, v88, v90, v92, v93, v94, v95] (preds: b18):
    v56:gpr = const(0x4)
    v57:gpr = const(0x0)
    v82:gpr = copy v51:gpr
    v85:gpr = copy v57:gpr
    term: branch b24
    succs: b24 [v33, v47, v48, v50, v52, v54, v82, v57, v86, v88, v90, v92, v93, v94, v95]
  block b21 [params: v33, v47, v48, v50, v51, v52, v54, v86, v88, v90, v92, v93, v94, v95] (preds: b19):
    v58:gpr = const(0x7)
    v59:gpr = const(0x4)
    v60:gpr = const(0x1)
    v62:gpr = const(0x7f)
    v66:gpr = const(0x7)
    v68:gpr = const(0x1)
    v70:gpr = const(0x80)
    v72:gpr = const(0x0)
    v74:gpr = const(0x0)
    v109:gpr = copy v51:gpr
    v110:gpr = copy v58:gpr
    v111:gpr = copy v59:gpr
    term: branch b22
    succs: b22 [v33, v47, v48, v50, v52, v54, v62, v66, v68, v70, v72, v74, v86, v88, v90, v92, v93, v94, v95, v109, v110, v111]
  block b22 [params: v33, v47, v48, v50, v52, v54, v62, v66, v68, v70, v72, v74, v86, v88, v90, v92, v93, v94, v95, v109, v110, v111] (preds: b21, b22):
    bounds_check(1)
    v67:gpr = Add v110:gpr, v66:gpr
    v69:gpr = Sub v111:gpr, v68:gpr
    v61:gpr = read_bytes(1)
    v75:gpr = CmpNe v69:gpr, v74:gpr
    v63:gpr = And v61:gpr, v62:gpr
    v71:gpr = And v61:gpr, v70:gpr
    v64:gpr = Shl v63:gpr, v110:gpr/hw1
    v73:gpr = CmpNe v71:gpr, v72:gpr
    v65:gpr = Or v109:gpr, v64:gpr
    v76:gpr = And v73:gpr, v75:gpr
    v109:gpr = copy v65:gpr
    v110:gpr = copy v67:gpr
    v111:gpr = copy v69:gpr
    v112:gpr = copy v63:gpr
    v113:gpr = copy v73:gpr
    term: branch_if v76 -> b22, fallthrough b23
    succs: b22 [v33, v47, v48, v50, v52, v54, v62, v66, v68, v70, v72, v74, v86, v88, v90, v92, v93, v94, v95, v109, v110, v111] b23 [v33, v47, v48, v50, v52, v54, v86, v88, v90, v92, v93, v94, v95, v109, v113]
  block b23 [params: v33, v47, v48, v50, v52, v54, v86, v88, v90, v92, v93, v94, v95, v109, v113] (preds: b22):
    v82:gpr = copy v109:gpr
    v85:gpr = copy v113:gpr
    term: branch b24
    succs: b24 [v33, v47, v48, v50, v52, v54, v82, v85, v86, v88, v90, v92, v93, v94, v95]
  block b24 [params: v33, v47, v48, v50, v52, v54, v82, v85, v86, v88, v90, v92, v93, v94, v95] (preds: b20, b23):
    v87:gpr = CmpNe v85:gpr, v86:gpr
    v89:gpr = Shr v82:gpr, v88:gpr/hw1
    term: branch_if_zero v87 -> b26, fallthrough b25
    succs: b26 [v33, v47, v48, v50, v52, v54, v82, v86, v88, v89, v90, v92, v93, v94, v95] b25
  block b25 (preds: b24):
    term: branch b27
    succs: b27
  block b26 [params: v33, v47, v48, v50, v52, v54, v82, v86, v88, v89, v90, v92, v93, v94, v95] (preds: b24):
    term: branch b28
    succs: b28 [v33, v47, v48, v50, v52, v54, v82, v86, v88, v89, v90, v92, v93, v94, v95]
  block b27 (preds: b25):
    term: error_exit(InvalidVarint)
    succs: (none)
  block b28 [params: v33, v47, v48, v50, v52, v54, v82, v86, v88, v89, v90, v92, v93, v94, v95] (preds: b26):
    v91:gpr = CmpNe v89:gpr, v90:gpr
    term: branch_if_zero v91 -> b30, fallthrough b29
    succs: b30 [v33, v47, v48, v50, v52, v54, v82, v86, v88, v90, v92, v93, v94, v95] b29
  block b29 (preds: b28):
    term: branch b31
    succs: b31
  block b30 [params: v33, v47, v48, v50, v52, v54, v82, v86, v88, v90, v92, v93, v94, v95] (preds: b28):
    term: branch b32
    succs: b32 [v33, v47, v48, v50, v52, v54, v82, v86, v88, v90, v92, v93, v94, v95]
  block b31 (preds: b29):
    term: error_exit(NumberOutOfRange)
    succs: (none)
  block b32 [params: v33, v47, v48, v50, v52, v54, v82, v86, v88, v90, v92, v93, v94, v95] (preds: b30):
    call_intrinsic(0x<ptr>, fo=0) v82:gpr !gpr,simd
    v105:gpr = copy v93:gpr
    v106:gpr = copy v95:gpr
    term: branch_if v93 -> b18, fallthrough b33
    succs: b18 [v33, v47, v48, v50, v52, v54, v86, v88, v90, v92, v94, v105, v106] b33 [v33, v47, v48]
  block b33 [params: v33, v47, v48] (preds: b32):
    set_out_ptr v48:gpr
    store([8:W8]) v47:gpr
    store([16:W8]) v33:gpr
    store([0:W8]) v33:gpr
    term: branch b34
    succs: b34
  block b34 (preds: b16, b33):
    term: return
    succs: (none)
}
